--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "ai": "latest",
     "autoprefixer": "^10.4.20",
@@ -81,6 +82,7 @@
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
     "postcss": "^8",
+    "supabase": "^2.20.12",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
